# lbdg

./: .gitignore  CMakeLists.txt  CrossCompile.cmake  LICENSE  README.md
builddeb_noresource/DEBIAN/: control
include/glad/: glad.h
ldraw/: list.ldr  list2.mpd  parts.lst
ldraw/models/: PoliceInterceptor.mpd  PoliceRescueBoat.mpd
shader/simple/: shader.fs  shader.vs
src/Core/: CMakeLists.txt  main.cpp
src/Models/: CMakeLists.txt  line.cpp  model.cpp  optionalLine.cpp  quadrilateral.cpp  subFile.cpp  triangle.cpp
src/Models/include/: .subFile.hpp.swp  line.hpp  model.hpp  optionalLine.hpp  quadrilateral.hpp  subFile.hpp  triangle.hpp
src/Print/: .print.cpp.swp  CMakeLists.txt  print.cpp
src/Print/include/: print.hpp
src/Render/: CMakeLists.txt  render.cpp
src/Render/include/: .render.hpp.swp  render.hpp
src/Tools/: CMakeLists.txt  camera.cpp  color.cpp  fileget.cpp  function.cpp  glad.c  point.cpp  shader.cpp
src/Tools/include/: camera.hpp  color.hpp  fileget.hpp  function.hpp  point.hpp  shader.hpp
thumbnail/: LDViewPartsList.css  list2.pbg
